[package]
name = "network-builder"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem Onchain Discovery Protocol"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.12"
rand = "0.8.3"
serde = { version = "1.0.124", default-features = false }
tokio = { version = "1.18.2", features = ["full"] }

channel = { path = "../../crates/channel" }
bcs = { git = "https://github.com/diem/bcs", rev = "30ce9f4ac51342d2fb4c04c4f5b40683d9652dc6" }
diem-config = { path = "../../config" }
diem-crypto = { path = "../../crates/diem-crypto" }
diem-infallible = { path = "../../crates/diem-infallible" }
diem-logger = { path = "../../crates/diem-logger" }
diem-metrics = {path = "../../crates/diem-metrics"}
diem-network-address-encryption = {path = "../../config/management/network-address-encryption"}
diem-secure-storage = { path = "../../secure/storage" }
diem-time-service = { path = "../../crates/diem-time-service", features = ["async"] }
diem-types = { path = "../../types" }
diem-workspace-hack = { path = "../../crates/diem-workspace-hack" }
netcore = { path = "../netcore" }
network = { path = "../." }
network-discovery = { path = "../discovery" }
subscription-service = { path = "../../crates/subscription-service" }
