[package]
name = "network-discovery"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem Network Peer Discovery"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.38"
futures = "0.3.12"
once_cell = "1.7.2"
serde_yaml = "0.8.17"
tokio = { version = "1.18.2", features = ["full"] }

channel = {path = "../../crates/channel"}
bcs = { git = "https://github.com/diem/bcs", rev = "30ce9f4ac51342d2fb4c04c4f5b40683d9652dc6" }
diem-config = { path = "../../config"}
diem-crypto = {path = "../../crates/diem-crypto"}
diem-logger = {path = "../../crates/diem-logger"}
diem-metrics = {path = "../../crates/diem-metrics"}
diem-time-service = {path = "../../crates/diem-time-service"}
diem-secure-storage = { path = "../../secure/storage" }
diem-network-address-encryption = {path = "../../config/management/network-address-encryption"}
diem-types = {path = "../../types"}
diem-workspace-hack = { path = "../../crates/diem-workspace-hack" }
move-core-types = { path = "../../language/move-core/types" }
network = {path = "../../network"}
short-hex-str = { path = "../../crates/short-hex-str" }
subscription-service = { path = "../../crates/subscription-service" }

[dev-dependencies]
diem-config = { path = "../../config", features = ["testing"]}
diem-temppath = { path = "../../crates/diem-temppath" }
netcore = { path = "../netcore", features = ["fuzzing"] }
rand = "0.8.3"
