[package]
name = "sdk-compatibility"
version = "0.0.0"
authors = ["Diem Association <opensource@diem.com>"]
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1"
bcs = { git = "https://github.com/diem/bcs", rev = "30ce9f4ac51342d2fb4c04c4f5b40683d9652dc6" }
rand = "0.8.3"
diem-sdk = { path = ".." }
once_cell = "1.7.2"

diem-workspace-hack = { path = "../../crates/diem-workspace-hack" }
