[package]
name = "diem-transaction-builder"
version = "0.0.2"
authors = ["Diem Association <opensource@diem.com>"]
description = "Generated transaction builders"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = ["crates-io"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
bcs = { git = "https://github.com/diem/bcs", rev = "30ce9f4ac51342d2fb4c04c4f5b40683d9652dc6" }
once_cell = "1.7.2"
serde = { version = "1.0.124", features = ["derive"] }

move-core-types = { path = "../../language/move-core/types", version = "0.0.2" }
diem-types = { path = "../../types", version = "0.0.2" }

proptest = { version = "1.0.0", optional = true }
proptest-derive = { version = "0.3.0", optional = true }

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = "0.3.0"
move-core-types = { path = "../../language/move-core/types", features = ["fuzzing"] }
diem-workspace-hack = { path = "../../crates/diem-workspace-hack" }

[features]
default = []
fuzzing = ["proptest", "proptest-derive", "move-core-types/fuzzing"]
