[package]
name = "shuffle-sample-custom-app"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
abigen = { path = "../../language/move-prover/abigen" }
diemdb = { path = "../../storage/diemdb" }
diem-config = { path = "../../config" }
diem-crypto = { path = "../../crates/diem-crypto" }
diem-genesis-tool = { path = "../../config/management/genesis" }
diem-json-rpc-types = { path = "../../json-rpc/types" }
diem-node = { path = "../../diem-node" }
diem-sdk = { path = "../../sdk" }
diem-temppath = { path = "../../crates/diem-temppath" }
diem-types = { path = "../../types" }
diem-workspace-hack = { path = "../../crates/diem-workspace-hack" }
generate-key = { path = "../../config/generate-key" }
move-prover = { path = "../../language/move-prover" }
transaction-builder-generator = { path = "../../language/transaction-builder/generator" }

shuffle-transaction-builder = { path = "../transaction-builder" }

anyhow = "1.0.38"
bcs = { git = "https://github.com/diem/bcs", rev = "30ce9f4ac51342d2fb4c04c4f5b40683d9652dc6" }
log = "0.4.14"
rand = "0.8.3"
structopt = "0.3.21"
walkdir = "2.3.1"
