[package]
name = "smoke-test"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem smoke test"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.38"
bcs = { git = "https://github.com/diem/bcs", rev = "30ce9f4ac51342d2fb4c04c4f5b40683d9652dc6" }
proptest = "1.0.0"
tokio = { version = "1.8.1", features = ["full"] }
walkdir = "2.3.1"

compiler = { path = "../../language/compiler" }
diem-config = { path = "../../config" }
diem-events-fetcher = { path = "../../language/diem-tools/diem-events-fetcher" }
diem-framework = { path = "../../language/diem-framework" }
diem-framework-releases = { path = "../../language/diem-framework/releases" }
diem-sdk = { path = "../../sdk" }
diem-temppath = { path = "../../crates/diem-temppath" }
diem-transaction-replay = { path = "../../language/diem-tools/transaction-replay" }
move-command-line-common = { path = "../../language/move-command-line-common" }
move-stdlib = { path = "../../language/move-stdlib" }
forge = { path = "../forge" }

[dev-dependencies]
base64 = "0.13.0"
hex = "0.4.3"
once_cell = "1.7.2"
num = "0.4.0"
num-traits = "0.2.14"
rand = "0.8.3"
regex = "1.5.5"
rust_decimal = "1.10.3"
rusty-fork = "0.3.0"
serde_yaml = "0.8.17"

backup-cli = { path = "../../storage/backup/backup-cli" }
cli = { path = "../cli", features = ["fuzzing"]  }
debug-interface = { path = "../../crates/debug-interface" }
futures = "0.3.12"
generate-key = { path = "../../config/generate-key" }
diem-crypto = { path = "../../crates/diem-crypto" }
diem-genesis-tool = {path = "../../config/management/genesis", features = ["testing"] }
diem-global-constants = { path = "../../config/global-constants" }
diem-infallible = { path = "../../crates/diem-infallible" }
diem-json-rpc = { path = "../../json-rpc" }
diem-json-rpc-types = { path = "../../json-rpc/types" }
diem-key-manager = { path = "../../secure/key-manager" }
diem-logger = { path = "../../crates/diem-logger" }
diem-management = { path = "../../config/management", features = ["testing"] }
diem-operational-tool = {path = "../../config/management/operational", features = ["testing"] }
diem-secure-storage = { path = "../../secure/storage", features = ["testing"] }
diem-swarm = { path = "../diem-swarm"}
diem-time-service = { path = "../../crates/diem-time-service", features = ["testing"] }
diem-types = { path = "../../types" }
diem-vault-client = { path = "../../secure/storage/vault", features = ["fuzzing"] }
diem-validator-interface = { path = "../../language/diem-tools/diem-validator-interface" }
diem-workspace-hack = { path = "../../crates/diem-workspace-hack" }
diem-writeset-generator = { path = "../../language/diem-tools/writeset-transaction-generator" }
diem-transaction-builder = { path = "../../sdk/transaction-builder" }

[[test]]
name = "forge"
harness = false
