[package]
name = "diem-network-address-encryption"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Encryption library for network addresses"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
base64 = "0.13.0"
serde = { version = "1.0.124", features = ["rc"], default-features = false }
thiserror = "1.0.37"

bcs = { git = "https://github.com/diem/bcs", rev = "30ce9f4ac51342d2fb4c04c4f5b40683d9652dc6" }
diem-global-constants = { path = "../../global-constants"}
diem-infallible = { path = "../../../crates/diem-infallible" }
diem-logger = { path = "../../../crates/diem-logger" }
diem-secure-storage = { path = "../../../secure/storage" }
diem-types = { path = "../../../types" }
diem-workspace-hack = { path = "../../../crates/diem-workspace-hack" }

[dev-dependencies]
rand = "0.8.3"
