[package]
name = "resource-viewer"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem genesis viewer"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
bcs = { git = "https://github.com/diem/bcs", rev = "30ce9f4ac51342d2fb4c04c4f5b40683d9652dc6" }
diem-workspace-hack = { path = "../../../crates/diem-workspace-hack" }
move-core-types = { path = "../../move-core/types" }
move-vm-types = { path = "../../move-vm/types" }
move-binary-format = { path = "../../move-binary-format" }
serde = { version = "1.0.124", features = ["derive", "rc"] }

anyhow = "1.0.38"
once_cell = "1.7.2"
hex = "0.4.3"
