[package]
name = "event-notifications"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
repository = "https://github.com/diem/diem"
description = "The notification service offered by state sync for on-chain events"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
async-trait = "0.1.42"
futures = "0.3.12"
itertools = { version = "0.10.0", default-features = false }
serde = { version = "1.0.124", default-features = false }
thiserror = "1.0.24"
tokio = { version = "1.8.1" }

channel = { path = "../../../crates/channel" }
diem-infallible = { path = "../../../crates/diem-infallible" }
diem-types = { path = "../../../types" }
diem-workspace-hack = { path = "../../../crates/diem-workspace-hack" }
storage-interface = { path = "../../../storage/storage-interface" }


[dev-dependencies]
bcs = { git = "https://github.com/diem/bcs", rev = "30ce9f4ac51342d2fb4c04c4f5b40683d9652dc6" }

diem-crypto = { path = "../../../crates/diem-crypto" }
diem-temppath = { path = "../../../crates/diem-temppath" }
diem-vm = { path = "../../../language/diem-vm" }
diemdb = { path = "../../../storage/diemdb" }
executor-test-helpers = { path = "../../../execution/executor-test-helpers" }
move-core-types = { path = "../../../language/move-core/types" }
vm-genesis = { path = "../../../language/tools/vm-genesis", features = ["fuzzing"] }
